feat - wandb 적용, 학습 로그 기능 구현
#10

--- a/sample_submission.ipynb
+++ b/sample_submission.ipynb
@@ -34,7 +34,9 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "from torchvision import transforms\n",
-    "from torchvision.transforms import Resize, ToTensor, Normalize"
+    "from torchvision.transforms import Resize, ToTensor, Normalize\n",
+    "\n",
+    "import wandb"
    ]
   },
   {
@@ -45,8 +47,15 @@
    "outputs": [],
    "source": [
     "# 테스트 데이터셋 폴더 경로를 지정해주세요.\n",
-    "test_dir = 'datasets/eval'\n",
-    "model_path = 'model/exp/best.pth'"
+    "experiment_name = ''\n",
+    "experiment_version = 'v0'\n",
+    "test_dir = '/data/ephemeral/home/datasets/eval'\n",
+    "model_path = f'ai_tech_6th_cv_level1/mask_classification/{experiment_name}:{experiment_version}'\n",
+    "\n",
+    "wandb.init(\n",
+    "    project=\"mask_classification\", \n",
+    "    name='inference',\n",
+    ")"
    ]
   },
   {
@@ -217,8 +226,12 @@
     "\n",
     "# 모델을 정의합니다. (학습한 모델이 있다면 torch.load로 모델을 불러주세요!)\n",
     "device = torch.device('cuda')\n",
+    "\n",
+    "artifact = wandb.use_artifact(model_path, type='model')\n",
+    "artifact_file = artifact.file()\n",
+    "\n",
     "model = BaseModel(num_classes=18).to(device)\n",
-    "model.load_state_dict(torch.load(model_path))\n",
+    "model.load_state_dict(torch.load(artifact_file), map_location='cuda')\n",
     "model.eval()\n",
     "\n",
     "# 모델이 테스트 데이터셋을 예측하고 결과를 저장합니다.\n",
